# stream-pipe

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  config.toml  deny.toml
.cargo/: config.toml
benches/: pipeline_bench.rs
debian/: postinst  service
src/: configuration.rs  downloader.rs  error.rs  frame.rs  lib.rs  logger.rs  main.rs  pipeline.rs
tools/: Justfile  PREGUNTAS_RESPUESTAS.md
